<resources>
    <string name="app_name">HeightWeightCalc</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="enter_height_in_meters">Enter height (in meters)</string>
    <string name="enter_weight_in_kg">Enter weight (in kg)</string>
    <string name="reset">Reset</string>
    <string name="result">Result</string>
    <string name="your_calculated_value">Your Calculated Value</string>
    <string name="your_calculated_value_is">Your Calculated Value is</string>
    <string name="calculate_value_again">Calculate Value Again</string>
    <string name="textview">TextView</string>
    <string name="this_app_is_develop_by_the_great_akram">This App is Develop By The Great Akram</string>
</resources>