<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    tools:ignore="MissingClass">


    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="227dp"
        android:layout_height="57dp"
        android:layout_marginBottom="284dp"
        android:hint="@string/enter_height_in_meters"
        android:inputType="numberDecimal"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="228dp"
        android:layout_height="53dp"
        android:layout_below="@id/heightEditText"
        android:layout_marginTop="64dp"
        android:hint="@string/enter_weight_in_kg"
        android:inputType="numberDecimal"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/heightEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="181dp"
        android:layout_height="55dp"
        android:layout_below="@id/weightEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:onClick="onClickCalculate"
        android:textSize="25dp"
        android:text="@string/calculate_bmi"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="172dp"
        android:layout_height="60dp"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="515dp"
        android:layout_marginBottom="168dp"
        android:onClick="onClickReset"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="13dp"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>
